# 2023-JCO-MahFingPancakes-beucodi

./: .gitignore  README.md
doc/: classes.wsd
doc/images/: classes.puml  sequence-start.puml
res/levels/: -1-0.lvl  -1-1.lvl  -1-2.lvl  -1-3.lvl  -1-4.lvl  -1-5.lvl  -1-6.lvl  -1-7.lvl  -1-8.lvl  0--1.lvl  0-0.lvl  0-1.lvl  0-2.lvl  0-3.lvl  0-4.lvl  0-5.lvl
src/: 2023-JCO-MahFingPancakes-beucodi.pro  CMakeLists.txt  Doxyfile  Player.cpp  Player.h  body.cpp  body.h  door.cpp  door.h  doxystyle.css  enemy.cpp  enemy.h  entity.cpp  entity.h  fallingplatform.cpp  fallingplatform.h  finalboss.cpp  finalboss.h  flyingpancake.cpp  flyingpancake.h  fragileplatform.cpp  fragileplatform.h  gamecanvas.h  gamecore.cpp  gamecore.h  globals.cpp  globals.h  heartcharge.cpp  heartcharge.h  hearticon.cpp  hearticon.h  hudicon.cpp  hudicon.h  item.cpp  item.h  jumpcharge.cpp  jumpcharge.h  jumpicon.cpp  jumpicon.h  jumpingpancake.cpp  (+25 more)
